Modified packagejson for heroku deployment

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start" : "npm run build-front && node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-front" : "cd frontend && npm run build && cd .."
+    "build-front" : "cd frontend && npm run build && cd ..",
+    "install-front" : "cd frontend && npm i && cd ..",
+    "heroku-postbuild" : "npm run install-front && npm run build-front"
   },
   "author": "Rémy Tupenot",
   "license": "ISC",
