--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,5 +14,8 @@
     "@tweenjs/tween.js": "^18.6.4",
     "axios": "^0.24.0",
     "three": "^0.132.2"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
