--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start" : "node server.js",
+    "dev" : "npm run build-front && npm run start",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-front" : "cd frontend && npm run build && cd ..",
     "install-front" : "cd frontend && npm ci && cd ..",
